# SpendGaugeAI

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
clients/js/: README.md  package-lock.json  package.json  tsconfig.json
clients/js/src/: client.ts  index.ts  wrap.ts
clients/js/test/: client.test.ts  wrap.test.ts
docs/: DESIGN.md  PUBLISHING.md  alpine-demo.html  mockup.html  react-demo.html
scripts/: build-css.sh
src/spendgaugeai/: __init__.py  alerts.py  app.py  auth.py  cli.py  client.py  database.py
src/spendgaugeai/static/: app.css  charts.js  dashboard.js
src/spendgaugeai/static/src/: input.css
src/spendgaugeai/templates/: base.html  usage.html
tests/: test_alerts.py  test_app.py  test_auth.py  test_client.py
