[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spendgaugeai"
version = "0.1.0"
description = "AI FinOps for self-hosted developers — a budget control center for Claude API spend."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Vijay" }]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "jinja2>=3.1",
    "pydantic>=2.7",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[project.scripts]
spendgaugeai = "spendgaugeai.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/spendgaugeai"]

[tool.hatch.build.targets.wheel.force-include]
"src/spendgaugeai/static" = "spendgaugeai/static"
"src/spendgaugeai/templates" = "spendgaugeai/templates"
